--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,9 @@
   ],
   "dependencies": {
     "angular-route": "^1.5.3",
-    "angular": "1.5.3"
+    "angular": "1.5.3",
+    "font-awesome": "fontawesome#^4.5.0",
+    "jquery": "^2.2.3",
+    "bootstrap": "^3.3.6"
   }
 }
